--- a/my-portfolio/tsconfig.json
+++ b/my-portfolio/tsconfig.json
@@ -18,9 +18,11 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "plugins": [{"name": "typescript-tslint-plugin"}]
   },
   "include": [
     "src"
   ]
+  
 }
