--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -7,7 +7,8 @@
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
-    "@mui/material": "^5.14.1",
+    "@mui/icons-material": "^5.14.1",
+    "@mui/material": "^5.14.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
